--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/Details.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/Details.cshtml
@@ -66,6 +66,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ZoomLevel)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ZoomLevel)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.L_users.username)
         </dt>
 
