--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/Index.cshtml
@@ -20,6 +20,7 @@
     columns.Add(c => c.Discription).Titled("Discription");
     columns.Add(c => c.ScreenUrl).Titled("ScreenUrl").Css("d-none");
     columns.Add(c => c.ResetRate).Titled("ResetRate").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.ZoomLevel).Titled("ZoomLevel").Css("d-none d-lg-table-cell");
     columns.Add(c => c.id)
                 .Titled("")
                 .Encoded(false)
