--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/WeldgunTool.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/WeldgunTool.cshtml
@@ -6,13 +6,16 @@
 <h2>WeldgunTool</h2>
 Location: @Html.DropDownList("Locations", null, htmlAttributes: new { @class = "selectpicker", @data_live_search = "true" })
 Tool_nr: @Html.DropDownList("tool_nr", null, htmlAttributes: new { @class = "selectpicker" })
+ElectrodeNo: @Html.DropDownList("ElectrodeNo", null, htmlAttributes: new { @class = "selectpicker" })
 <button class="btn btn-primary btn-sm" id="btn_getData">Load data</button>
+
 <hr />
 <div class="alert alert-warning">
     Oude tool is nog beschikbaar via "Toolkit" in de taskbar.
     Gelieve deze nieuwe tool te gebruiken oude gaat binnenkort definitief weg.
 </div>
 <hr />
+
 <div id="welgunToolPlaceholder"></div>
 <!--WeldgunToolScripts-->
 <script>
@@ -20,8 +23,9 @@ Tool_nr: @Html.DropDownList("tool_nr", null, htmlAttributes: new { @class = "sel
     $('#btn_getData').click(function () {
         $('#welgunToolPlaceholder').load('@Url.Action("_WeldgunTool")',
             {
-                location: $('#Locations').find(":selected").text(),
-                tool_nr: $('#tool_nr').find(":selected").text()
+                location: $('#Locations').find(":selected").val(),
+                tool_nr: $('#tool_nr').find(":selected").val(),
+                ElectrodeNo: $('#ElectrodeNo').find(":selected").val()
             },
             function (result) {
                 $('#welgunToolPlaceholder').html($("#Error", result).html());
