debug welding tool

--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -50,7 +50,7 @@
                             .RenderedAs(c =>
                             MyHtmlHelpers.IconActionLink(Url.Action("Listalerts", new { Location = c.location }), "fas fa-filter", "", "Filter alerts for this location").ToHtmlString() +     //add filterbutton
                             MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this alert").ToHtmlString() +    //add edit button
-                            (c.info.Contains("gun") ? MyHtmlHelpers.IconActionLink(Url.Action("WeldgunTool", "NgacElectrode", new {Area= "Tiplife", location = c.location, tool_nr = c.info.Replace(":", "").Substring(c.info.IndexOf("gun"), 5).Replace("gun", "") }), "fas fa-chart-line", "", "Launch WeldgunTool").ToHtmlString() : "")  //launch WeldgunTool tool (if needed)
+                            (c.info.Contains("gun") ? MyHtmlHelpers.IconActionLink(Url.Action("WeldgunTool", "Electrode", new {Area= "Tiplife", location = c.location, tool_nr = c.info.Replace(":", "").Substring(c.info.IndexOf("gun"), 5).Replace("gun", "") }), "fas fa-chart-line", "", "Launch WeldgunTool").ToHtmlString() : "")  //launch WeldgunTool tool (if needed)
                             ).Filterable(false);
     }).Filterable().Sortable().Pageable(pager =>
     {
