--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/WeldgunTool.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/WeldgunTool.cshtml
@@ -10,7 +10,7 @@ ElectrodeNo: @Html.DropDownList("ElectrodeNo", null, htmlAttributes: new { @clas
 <button class="btn btn-primary btn-sm" id="btn_getData">Load data</button>
 
 <hr />
-<div class="alert alert-warning">
+<div class="alert alert-danger">
     Oude tool is nog beschikbaar via "Toolkit" in de taskbar.
     Gelieve deze nieuwe tool te gebruiken oude gaat binnenkort definitief weg.
 </div>
