--- a/EqUiWebUi/Content/CustomStyleTweeks.css
+++ b/EqUiWebUi/Content/CustomStyleTweeks.css
@@ -1,4 +1,11 @@
-﻿/*for colapsable pannel*/
+﻿
+/*font tuning*/
+body {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+/*for collapse panel*/
 .clickable {
     cursor: pointer;
 }
