--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
@@ -9,9 +9,11 @@
     columns.Add(c => c.Dress_Num).Titled("#Dress");
     columns.Add(c => c.Wear_Fixed).Titled("(mm)Wear_Fixed");
     columns.Add(c => c.Wear_Move).Titled("(mm)Wear_Move");
-    columns.Add().Titled("Pwear").RenderedAs(c => EqUiWebUi.Areas.Tiplife.TiplifeHelpers.getPwear(c)); 
+    columns.Add().Titled("Pwear").RenderedAs(c => EqUiWebUi.Areas.Tiplife.TiplifeHelpers.getPwear(c));
     columns.Add(c => c.ErrorType).Titled("Error");
 }).Sortable().Filterable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("No data found").Css("table-hover")
