--- a/EqUiWebUi/Areas/VASC/Views/c_controller/Edit.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/Edit.cshtml
@@ -146,6 +146,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.hasTipchanger, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.CheckBoxFor(model => model.hasTipchanger, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.hasTipchanger, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
