--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipStatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipStatus.cshtml
@@ -20,7 +20,7 @@
                  .Encoded(false)
                  .Filterable(false)
                  .Sortable(false)
-                 .RenderedAs(c => TiplifeHtmlHelpers.TipMonitorIcon(c.Status, c.RobotWear));
+                 .RenderedAs(c => TiplifeHtmlHelpers.TipMonitorIcon(c.Status, c.RobotWear, c.hasTipchanger));
     //launch sbcu tool
     columns.Add()
                      .Encoded(false)
@@ -33,5 +33,5 @@
     pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
 
-}).Empty("No data found").Css("table-hover").RowCss(row => EqUiWebUi.Areas.Tiplife.TiplifeHelpers.getRowStyleByWearValue(row.pWear, row.nDress, row.nRcars, row.Status))
+}).Empty("No data found").Css("table-hover").RowCss(row => EqUiWebUi.Areas.Tiplife.TiplifeHelpers.getRowStyleByWearValue(row.pWear, row.nDress, row.nRcars, row.Status, row.hasTipchanger))
 
